--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trial",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.13",
@@ -9,25 +10,40 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.3",
+    "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
+    "date-fns": "^2.29.3",
     "framer-motion": "^12.4.11",
+    "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
     "style-loader": "^4.0.0",
+    "tailwind-scrollbar": "^4.0.1",
+    "universal-cookie": "^8.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run react-start\" \"npm run electron-start\"",
+    "react-start": "react-scripts start",
+    "electron-start": "electron .",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint src ",
+    "pack": "electron-packager . MyElectronApp --platform=win32 --arch=x64 --icon=public/icon.ico --overwrite --asar --out=dist"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +64,8 @@
     ]
   },
   "devDependencies": {
+    "electron": "^35.0.3",
+    "electron-packager": "^17.1.2",
     "tailwindcss": "^3.4.17"
   }
 }
