--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "style-loader": "^4.0.0",
