--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "concurrently": "^9.1.2",
+    "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^12.4.11",
