--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL="https://inaitestingapi.s3remotica.com"
+REACT_APP_BASE_URL="https://inaidevapi.s3remotica.com"
 
 REACT_APP_RECAPTCHA_SITE_KEY= '6Lff4AkrAAAAADqJp5lyxbjq2fsUtxX1Ml0EbXqe'
  
