--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
+    "@eslint/js": "^9.24.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.13",
     "@testing-library/dom": "^10.4.0",
@@ -18,6 +19,7 @@
     "css-loader": "^7.1.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^12.4.11",
+    "globals": "^16.0.0",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.3",
@@ -68,6 +70,10 @@
   "devDependencies": {
     "electron": "^35.0.3",
     "electron-packager": "^17.1.2",
+    "eslint": "^8.57.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "tailwindcss": "^3.4.17"
   }
 }
