--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "date-fns": "^2.29.3",
     "framer-motion": "^12.4.11",
     "globals": "^16.0.0",
+    "i": "^0.3.7",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
+    "npm": "^11.2.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
