--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
+    "bootstrap": "^5.3.5",
     "concurrently": "^9.1.2",
     "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "framer-motion": "^12.4.11",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
@@ -24,17 +25,22 @@
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^4.0.0",
+    "swiper": "^11.2.6",
     "tailwind-scrollbar": "^4.0.1",
     "universal-cookie": "^8.0.1",
     "web-vitals": "^2.1.4"
