--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i": "^0.3.7",
     "iconsax-react": "^0.0.8",
     "lucide-react": "^0.475.0",
+    "moment": "^2.30.1",
     "npm": "^11.2.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
