--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.5",
+    "browser-image-compression": "^2.0.2",
     "concurrently": "^9.1.2",
     "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
