--- a/.env
+++ b/.env
@@ -16,3 +16,8 @@ REACT_APP_RECAPTCHA_LIVE_KEY=6LeglggrAAAAAJH4_g4UXbNH1sGzOSUtCPUl1DJR
 
 
 
+# staging site key : 6LdpyhsrAAAAAKhO2DF7k7eJ-bbdlsBSbgq1fP2V
+
+# staging secret key : 6LdpyhsrAAAAAHbBqxuHTJCLFyNWecWwVMNr4avZ
+
+
