--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 REACT_APP_BASE_URL="https://inaidevapi.s3remotica.com"
 
-REACT_APP_RECAPTCHA_SITE_KEY= '6Lff4AkrAAAAADqJp5lyxbjq2fsUtxX1Ml0EbXqe'
  
 
 
 REACT_APP_RECAPTCHA_LOCAL_KEY=6Lff4AkrAAAAADqJp5lyxbjq2fsUtxX1Ml0EbXqe
 REACT_APP_RECAPTCHA_LIVE_KEY=6LeglggrAAAAAJH4_g4UXbNH1sGzOSUtCPUl1DJR
 
-
+# testing  site key =>6LeglggrAAAAAJH4_g4UXbNH1sGzOSUtCPUl1DJR
+#  dev site key => 6Lff4AkrAAAAADqJp5lyxbjq2fsUtxX1Ml0EbXqe
 
 
 # https://inaitestingapi.s3remotica.com/
